--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -11,4 +11,5 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  text-align: center;
 }/*# sourceMappingURL=index.css.map */
