--- a/assets/styles/_settings.scss
+++ b/assets/styles/_settings.scss
@@ -7,6 +7,8 @@
     font-family: "Merriweather";
     src: url(../fonts/Merriweather-Light.ttf);
 }
+$color1: white;
+$color2: black;
 
 * {
     margin: 0;
