--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,4 +1,8 @@
 @import "./settings";
 @import "./layouts/header";
 @import "./layouts/background";
-@import "./layouts/nav-bar"
+@import "./layouts/nav-bar";
+@import "./components/buttons";
+@import "./layouts/main";
+@import "./layouts/section";
+@import "./layouts/footer";
